# ncnn_fastdet_on_esp32

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  fastdet_main.cpp
ncnn/include/ncnn/: platform.h
ncnn/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
ncnn/lib/pkgconfig/: ncnn.pc
